[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0035-tutorial3"
version = "0.0.1"
authors = [
  { name="Sarah Sanders", email="sarah.sanders@ucl.ac.uk" },
]
description = "Template repository for COMP0035 tutorials 3 and 4"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "matplotlib",
    "openpyxl",
]

# see https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[tool.setuptools]
include-package-data = true

# see https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
[tool.setuptools.packages.find]
where = ["src"]
include = ["starter_code","data"]
namespaces = false

[tool.setuptools.package-data]
data = ["*.csv","*.xlsx"]